<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_basic_page"
        tools:context=".ui.HomeActivity">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/curve_toolbar_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Test"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="-30dp"
            android:layout_centerHorizontal="true">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_todo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_home_height"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="@dimen/card_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/card_home_padding">
                    <ImageView
                        android:layout_width="@dimen/ic_home_size"
                        android:layout_height="@dimen/ic_home_size"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_todo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/txt_home_menu"
                        android:text="@string/my_todo"/>

                    <ImageView
                        android:layout_width="@dimen/ic_home_size"
                        android:layout_height="@dimen/ic_home_size"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_todo"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_search_todo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_home_height"
                android:layout_marginTop="@dimen/card_home_marginTop"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="@dimen/card_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/card_home_padding">
                    <ImageView
                        android:layout_width="@dimen/ic_home_size"
                        android:layout_height="@dimen/ic_home_size"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_search"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/txt_home_menu"
                        android:text="@string/search_todo"/>

                    <ImageView
                        android:layout_width="@dimen/ic_home_size"
                        android:layout_height="@dimen/ic_home_size"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_search"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_search_user"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_home_height"
                android:layout_marginTop="@dimen/card_home_marginTop"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="@dimen/card_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/card_home_padding">
                    <ImageView
                        android:layout_width="@dimen/ic_home_size"
                        android:layout_height="@dimen/ic_home_size"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_people"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/txt_home_menu"
                        android:text="@string/search_user"/>

                    <ImageView
                        android:layout_width="@dimen/ic_home_size"
                        android:layout_height="@dimen/ic_home_size"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_people"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_home_height"
                android:layout_marginTop="@dimen/card_home_marginTop"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="@dimen/card_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/card_home_padding">
                    <ImageView
                        android:layout_width="@dimen/ic_home_size"
                        android:layout_height="@dimen/ic_home_size"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_face"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/txt_home_menu"
                        android:text="Profile"/>

                    <ImageView
                        android:layout_width="@dimen/ic_home_size"
                        android:layout_height="@dimen/ic_home_size"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_face"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@color/sBase">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/footer"
                />
        </RelativeLayout>

    </RelativeLayout>
</layout>